# dc

./: .gitignore  .ninja_deps  .ninja_log  20260504_203229_ll_p1_to_190.txt  CMakeCache.txt  CMakeLists.txt  COMPILAR_CON_MI_QT.bat  EJECUTAR_app.bat  README.md  build.ninja  cmake_install.cmake  dc.code-workspace
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
dofus_process_sniffer_autogen/: deps  mocs_compilation.cpp
dofus_process_sniffer_autogen/UVLADIE3JM/: moc_DiagnosticsLogWindow.cpp  moc_DiagnosticsLogWindow.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ProcessMonitor.cpp  moc_ProcessMonitor.cpp.d  moc_TcpMitmProxy.cpp  moc_TcpMitmProxy.cpp.d
src/: DebugCentralLog.cpp  DebugCentralLog.h  DiagnosticsLogWindow.cpp  DiagnosticsLogWindow.h  DllInjector.cpp  DllInjector.h  IdDatabase.cpp  IdDatabase.h  IriCardinalEmulator.cpp  IriCardinalEmulator.h  MainWindow.cpp  MainWindow.h  MemoryIpPatch.cpp  MemoryIpPatch.h  PacketTypeOverrides.cpp  PacketTypeOverrides.h  ProcessEnumerator.cpp  ProcessEnumerator.h  ProcessMonitor.cpp  ProcessMonitor.h  ProtobufParser.cpp  ProtobufParser.h  ProtocolLogAnalyzer.cpp  ProtocolLogAnalyzer.h  ResourceAliasEditor.cpp  ResourceAliasEditor.h  ResourcePredictor.cpp  ResourcePredictor.h  TcpMitmProxy.cpp  TcpMitmProxy.h  WindowsGameReconnect.cpp  WindowsGameReconnect.h  WindowsProcessSuspend.cpp  WindowsProcessSuspend.h  WindowsTcpConnectionKiller.cpp  WindowsTcpConnectionKiller.h  WindowsTcpPidSnapshot.cpp  WindowsTcpPidSnapshot.h  dofus_redirect_dll.cpp  main.cpp  (+1 more)
tools/: iso_infer.py
tools/proto_dump/: ProtoDump.cs
tools/proto_dump_net/: Program.cs  proto_dump_net.csproj
